--- a/sections/kinda-product-multicolumn.liquid
+++ b/sections/kinda-product-multicolumn.liquid
@@ -1,13 +1,3 @@
-{{ 'section-multicolumn.css' | asset_url | stylesheet_tag }}
-<link
-  href="{{ 'component-slider.css' | asset_url }}"
-  media="print"
-  onload="this.media='all'"
-  rel="stylesheet">
-<noscript>
-  {{ 'component-slider.css' | asset_url | stylesheet_tag }}
-</noscript>
-
 <link
   href="{{ 'kinda-product-multicolumn.css' | asset_url }}"
   media="print"
@@ -50,118 +40,55 @@
         <h2 class="title {{ section.settings.heading_size }}">
           {{ section.settings.title | escape }}
         </h2>
-        {%- if section.settings.button_label != blank and show_mobile_slider -%}
-          <a class="link underlined-link large-up-hide" href="{{ section.settings.button_link }}">
-            {{- section.settings.button_label | escape -}}
-          </a>
-        {%- endif -%}
       </div>
     {%- endunless -%}
-    <slider-component class="slider-mobile-gutter">
-      <ul
-        class="multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop{% if show_mobile_slider %} slider slider--mobile grid--peek{% endif %}"
-        id="Slider-{{ section.id }}"
-        role="list">
+    <ul class="kinda-multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop" role="list">
+      {%- for block in section.blocks -%}
+        {%- case block.type -%}
+          {%- when 'column' -%}
+          <li class="kinda-multicolumn-list__blocks {% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}" {{ block.shopify_attributes }}>
+            <div class="multicolumn-card content-container">
 
-        {%- for block in section.blocks -%}
-          {%- case block.type -%}
-            {%- when '@app' -%}
-            {% render block %}
-            {%- when 'column' -%}
-            <li
-              class="multicolumn-list__item grid__item{% if section.settings.swipe_on_mobile %} slider__slide{% endif %}{% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}"
-              id="Slide-{{ section.id }}-{{ forloop.index }}"
-              {{ block.shopify_attributes }}>
-              <div class="multicolumn-card content-container">
-
-                <div class="multicolumn-card__info">
-                  {%- if block.settings.title != blank -%}
-                    <h3>
-                      {{ block.settings.title | escape }}
-                    </h3>
-                  {%- endif -%}
-                  {%- if block.settings.text != blank -%}
-                    <div class="rte">
-                      {{ block.settings.text }}
-                    </div>
-                  {%- endif -%}
-                  {%- if block.settings.link_label != blank -%}
-                    <a
-                      class="link animate-arrow"
-                      {% if block.settings.link == blank %}
-                      role="link"
-                      aria-disabled="true"
-                      {% else %}
-                      href="{{ block.settings.link }}"
-                      {% endif %}>
-                      {{- block.settings.link_label | escape -}}
-                      <span class="icon-wrap">
-                        &nbsp;{% render 'icon-arrow' %}
-                      </span>
-                    </a>
-                  {%- endif -%}
-                </div>
+              <div class="multicolumn-card__info">
+                {%- if block.settings.title != blank -%}
+                  <h3>
+                    {{ block.settings.title | escape }}
+                  </h3>
+                {%- endif -%}
+                {%- if block.settings.text != blank -%}
+                  <div class="rte">
+                    {{ block.settings.text }}
+                  </div>
+                {%- endif -%}
+                {%- if block.settings.link_label != blank -%}
+                  <a
+                    class="link animate-arrow"
+                    {% if block.settings.link == blank %}
+                    role="link"
+                    aria-disabled="true"
+                    {% else %}
+                    href="{{ block.settings.link }}"
+                    {% endif %}>
+                    {{- block.settings.link_label | escape -}}
+                    <span class="icon-wrap">
+                      &nbsp;{% render 'icon-arrow' %}
+                    </span>
+                  </a>
+                {%- endif -%}
               </div>
-            </li>
-
-            {%- when 'nutritional-column' -%}
-            <li>
-              {%- render 'nutritional-info', energy_kj: product.metafields.custom.energy_kj, energy_kcal: product.metafields.custom.energy_kcal, fat: product.metafields.custom.fat, fat_saturates: product.metafields.custom.fat_saturates, carbs: product.metafields.custom.carbs, carbs_sugar: product.metafields.custom.carbs_sugar, protein: product.metafields.custom.protein, salt: product.metafields.custom.salt -%}
-            </li>
-          {%- endcase -%}
-        {%- endfor -%}
-
-      </ul>
-
-      {%- if show_mobile_slider -%}
-        <div class="slider-buttons no-js-hidden medium-hide">
-          <button
-            aria-label="{{ 'general.slider.previous_slide' | t }}"
-            class="slider-button slider-button--prev"
-            name="previous"
-            type="button">
-            {% render 'icon-caret' %}
-          </button>
-          <div class="slider-counter caption">
-            <span class="slider-counter--current">
-              1
-            </span>
-            <span aria-hidden="true">
-              /
-            </span>
-            <span class="visually-hidden">
-              {{ 'general.slider.of' | t }}
-            </span>
-            <span class="slider-counter--total">
-              {{ section.blocks.size }}
-            </span>
-          </div>
-          <button
-            aria-label="{{ 'general.slider.next_slide' | t }}"
-            class="slider-button slider-button--next"
-            name="next"
-            type="button">
-            {% render 'icon-caret' %}
-          </button>
-        </div>
-      {%- endif -%}
-    </slider-component>
-    <div class="center{% if show_mobile_slider %} small-hide medium-hide{% endif %}">
-      {%- if section.settings.button_label != blank -%}
-        <a
-          class="button button--primary"
-          {% if section.settings.button_link == blank %}
-          role="link"
-          aria-disabled="true"
-          {% else %}
-          href="{{ section.settings.button_link }}"
-          {% endif %}>
-          {{ section.settings.button_label | escape }}
-        </a>
-      {%- endif -%}
-    </div>
+            </div>
+          </li>
+        {%- endcase -%}
+      {%- endfor -%}
+      {% if section.settings.nutritional_info %}
+        <li class="kinda-multicolumn-list__nutritional {% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}" {{ block.shopify_attributes }}>
+          {%- render 'nutritional-info', energy_kj: product.metafields.custom.energy_kj, energy_kcal: product.metafields.custom.energy_kcal, fat: product.metafields.custom.fat, fat_saturates: product.metafields.custom.fat_saturates, carbs: product.metafields.custom.carbs, carbs_sugar: product.metafields.custom.carbs_sugar, protein: product.metafields.custom.protein, salt: product.metafields.custom.salt -%}
+        </li>
+      {% endif %}
+    </ul>
   </div>
 </div>
+
 
 {% schema %}
   {
@@ -169,9 +96,7 @@
     "class": "section",
     "tag": "section",
     "blocks": [
-      {
-        "type": "@app"
-      },
+
       {
         "type": "column",
         "name": "t:sections.multicolumn.blocks.column.name",
@@ -204,20 +129,16 @@
             "label": "t:sections.multicolumn.blocks.column.settings.link.label"
           }
         ]
-      },
-      {
-        "type": "nutritional-column",
-        "name": "Nutritional Column",
-        "settings": [
-          {
-            "type": "number",
-            "id": "energy_kj",
-            "label": "Energy (Kj)"
-          }
-        ]
       }
     ],
     "settings": [
+      {
+        "type": "checkbox",
+        "id": "nutritional_info",
+        "label": "Include nutritional information?",
+        "default": true
+
+      },
       {
         "type": "text",
         "id": "title",
