--- a/sections/kinda-image-banner.liquid
+++ b/sections/kinda-image-banner.liquid
@@ -160,7 +160,7 @@
 
 {% schema %}
   {
-    "name": "Kinda Image Kinda-Banner",
+    "name": "Kinda Image",
     "tag": "section",
     "class": "section",
     "settings": [
@@ -541,7 +541,7 @@
     ],
     "presets": [
       {
-        "name": "t:sections.image-banner.presets.name",
+        "name": "Kinda Image",
         "blocks": [
           {
             "type": "heading"
