hero mobile styles

--- a/sections/kinda-hero.liquid
+++ b/sections/kinda-hero.liquid
@@ -16,9 +16,17 @@
 
   .hero,
   .hero__media {
-    height: 58vh;
+    /* height: 58vh; */
+    height: 38rem;
     /* min-height: 400px; */
   }
+
+  @media screen and (max-width: 749px) {
+    .hero,
+  .hero__media {
+   
+    }
+}
 
   /* .hero__media {
     display: flex;
@@ -48,6 +56,7 @@
     position: relative;
     overflow: hidden;
   }
+
 
   .hero_background {
     display: flex;
@@ -85,6 +94,20 @@
     width: 50%;
   }
 
+  @media screen and (max-width: 749px) {
+    .hero__sticker {
+      height: 108%;
+      top: -20%;
+    }
+  }
+
+  @media screen and (max-width: 475px) {
+    .hero__sticker {
+      height: 100%;
+      top: -7%;
+    }
+  }
+
   .hero__content {
     position: absolute;
     top: 6%;
@@ -106,6 +129,12 @@
     width: 100%;
     text-align: center;
 
+  }
+
+  @media screen and (max-width: 749px) {
+    .hero__content {
+      padding: 4rem;
+    }
   }
 {% endstyle %}
 
