--- a/sections/kinda-hero.liquid
+++ b/sections/kinda-hero.liquid
@@ -23,10 +23,8 @@
 
   @media screen and (max-width: 749px) {
     .hero,
-  .hero__media {
-   
-    }
-}
+    .hero__media {}
+  }
 
   /* .hero__media {
     display: flex;
@@ -103,8 +101,11 @@
 
   @media screen and (max-width: 475px) {
     .hero__sticker {
-      height: 100%;
-      top: -7%;
+      width: 100vw;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      bottom: 6rem;
+      top: auto;
     }
   }
 
@@ -134,6 +135,21 @@
   @media screen and (max-width: 749px) {
     .hero__content {
       padding: 4rem;
+    }
+  }
+
+  @media screen and (max-width: 475px) {
+    .hero__content h1 {
+
+      font-size: calc(var(--font-heading-scale) * 2.4rem);
+
+    }
+
+    .hero__content {
+      height: calc(100% + 2rem);
+      top: auto;
+      bottom: -2rem;
+      /* padding: 1rem; */
     }
   }
 {% endstyle %}
