--- a/sections/kinda-hero.liquid
+++ b/sections/kinda-hero.liquid
@@ -21,10 +21,6 @@
     /* min-height: 400px; */
   }
 
-  @media screen and (max-width: 749px) {
-    .hero,
-    .hero__media {}
-  }
 
   /* .hero__media {
     display: flex;
@@ -73,16 +69,18 @@
   .hero__sticker {
     background: rgb(var(--color-background));
     border-radius: 100%;
-    height: 130%;
-    max-height: 580px;
+    /* height: 130%; */
+    height: 50rem;
+    /* max-height: 580px; */
     aspect-ratio: 1 / 1;
     padding: 0;
     position: absolute;
-    top: -35%;
+    /* top: -35%; */
+    bottom: 2rem;
     z-index: 2;
   }
 
-  .hero__sticker .semi {
+  /* .hero__sticker .semi {
     z-index: 3;
     padding: 0;
     position: absolute;
@@ -90,7 +88,7 @@
 
     height: 50%;
     width: 50%;
-  }
+  } */
 
   @media screen and (max-width: 749px) {
     .hero__sticker {
@@ -110,8 +108,8 @@
   }
 
   .hero__content {
-    position: absolute;
-    top: 6%;
+    /* position: absolute;
+    top: 6%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,10 +144,12 @@
     }
 
     .hero__content {
-      height: calc(100% + 2rem);
-      top: auto;
-      bottom: -2rem;
+      /* height: calc(100vw + 1rem); */
+      /* top: auto; */
+      /* bottom: 1rem; */
       /* padding: 1rem; */
+      position: absolute;
+      bottom: -2rem;
     }
   }
 {% endstyle %}
