--- a/sections/kinda-product-multicolumn.liquid
+++ b/sections/kinda-product-multicolumn.liquid
@@ -23,28 +23,16 @@
 
 {%- liquid
   assign columns_mobile_int = section.settings.columns_mobile | plus: 0
-  assign show_mobile_slider = false
-  if section.settings.swipe_on_mobile and section.blocks.size > columns_mobile_int
-    assign show_mobile_slider = true
-  endif
+ 
 -%}
 
 <div class="multicolumn color-{{ section.settings.color_scheme }} gradient{% unless section.settings.background_style == 'none' and settings.text_boxes_border_thickness > 0 or settings.text_boxes_shadow_opacity > 0 %} background-{{ section.settings.background_style }}{% endunless %}{% if section.settings.title == blank %} no-heading{% endif %}">
-  <div class="page-width section-{{ section.id }}-padding isolate">
-    {%- unless section.settings.title == blank -%}
-      <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin">
-        <h2 class="title {{ section.settings.heading_size }}">
-          {{ section.settings.title | escape }}
-        </h2>
-      </div>
-    {%- endunless -%}
+  <div class="page-width section-{{ section.id }}-padding isolate">   
     <ul class="kinda-multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop" role="list">
       {%- for block in section.blocks -%}
-        {%- case block.type -%}
-          {%- when 'column' -%}
+       
           <li class="kinda-multicolumn-list__blocks {% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}" {{ block.shopify_attributes }}>
             <div class="multicolumn-card content-container">
-
               <div class="multicolumn-card__info">
                 {%- if block.settings.title != blank -%}
                   <h3>
@@ -74,13 +62,12 @@
               </div>
             </div>
           </li>
-        {%- endcase -%}
       {%- endfor -%}
-      {% if section.settings.nutritional_info %}
-        <li class="kinda-multicolumn-list__nutritional {% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}" {{ block.shopify_attributes }}>
+  
+        <li class="kinda-multicolumn-list__nutritional multicolumn-card__info {% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}" {{ block.shopify_attributes }}>
           {%- render 'nutritional-info', energy_kj: product.metafields.custom.energy_kj, energy_kcal: product.metafields.custom.energy_kcal, fat: product.metafields.custom.fat, fat_saturates: product.metafields.custom.fat_saturates, carbs: product.metafields.custom.carbs, carbs_sugar: product.metafields.custom.carbs_sugar, protein: product.metafields.custom.protein, salt: product.metafields.custom.salt -%}
         </li>
-      {% endif %}
+     
     </ul>
   </div>
 </div>
@@ -92,16 +79,11 @@
     "class": "section",
     "tag": "section",
     "blocks": [
-
       {
         "type": "column",
         "name": "t:sections.multicolumn.blocks.column.name",
         "settings": [
-          {
-            "type": "image_picker",
-            "id": "image",
-            "label": "t:sections.multicolumn.blocks.column.settings.image.label"
-          },
+      
           {
             "type": "text",
             "id": "title",
@@ -113,98 +95,11 @@
             "id": "text",
             "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
             "label": "t:sections.multicolumn.blocks.column.settings.text.label"
-          },
-          {
-            "type": "text",
-            "id": "link_label",
-            "label": "t:sections.multicolumn.blocks.column.settings.link_label.label"
-          },
-          {
-            "type": "url",
-            "id": "link",
-            "label": "t:sections.multicolumn.blocks.column.settings.link.label"
           }
         ]
       }
     ],
     "settings": [
-      {
-        "type": "checkbox",
-        "id": "nutritional_info",
-        "label": "Include nutritional information?",
-        "default": true
-
-      },
-      {
-        "type": "text",
-        "id": "title",
-        "default": "Multicolumn",
-        "label": "t:sections.multicolumn.settings.title.label"
-      },
-      {
-        "type": "select",
-        "id": "heading_size",
-        "options": [
-          {
-            "value": "h2",
-            "label": "t:sections.all.heading_size.options__1.label"
-          },
-          {
-            "value": "h1",
-            "label": "t:sections.all.heading_size.options__2.label"
-          },
-          {
-            "value": "h0",
-            "label": "t:sections.all.heading_size.options__3.label"
-          }
-        ],
-        "default": "h1",
-        "label": "t:sections.all.heading_size.label"
-      },
-      {
-        "type": "select",
-        "id": "image_width",
-        "options": [
-          {
-            "value": "third",
-            "label": "t:sections.multicolumn.settings.image_width.options__1.label"
-          },
-          {
-            "value": "half",
-            "label": "t:sections.multicolumn.settings.image_width.options__2.label"
-          },
-          {
-            "value": "full",
-            "label": "t:sections.multicolumn.settings.image_width.options__3.label"
-          }
-        ],
-        "default": "full",
-        "label": "t:sections.multicolumn.settings.image_width.label"
-      },
-      {
-        "type": "select",
-        "id": "image_ratio",
-        "options": [
-          {
-            "value": "adapt",
-            "label": "t:sections.multicolumn.settings.image_ratio.options__1.label"
-          },
-          {
-            "value": "portrait",
-            "label": "t:sections.multicolumn.settings.image_ratio.options__2.label"
-          },
-          {
-            "value": "square",
-            "label": "t:sections.multicolumn.settings.image_ratio.options__3.label"
-          },
-          {
-            "value": "circle",
-            "label": "t:sections.multicolumn.settings.image_ratio.options__4.label"
-          }
-        ],
-        "default": "adapt",
-        "label": "t:sections.multicolumn.settings.image_ratio.label"
-      },
       {
         "type": "range",
         "id": "columns_desktop",
@@ -286,10 +181,6 @@
         "label": "t:sections.all.colors.label"
       },
       {
-        "type": "header",
-        "content": "t:sections.multicolumn.settings.header_mobile.content"
-      },
-      {
         "type": "select",
         "id": "columns_mobile",
         "options": [
@@ -304,12 +195,6 @@
         ],
         "default": "1",
         "label": "t:sections.multicolumn.settings.columns_mobile.label"
-      },
-      {
-        "type": "checkbox",
-        "id": "swipe_on_mobile",
-        "default": false,
-        "label": "t:sections.multicolumn.settings.swipe_on_mobile.label"
       },
       {
         "type": "header",
@@ -334,6 +219,19 @@
         "unit": "px",
         "label": "t:sections.all.padding.padding_bottom",
         "default": 36
+      }
+    ],
+    "presets": [
+      {
+        "name": "Product multicolumn",
+        "blocks": [
+          {
+            "type": "column"
+          },
+          {
+            "type": "column"
+          }
+        ]
       }
     ]
   }
