hero module updated

--- a/sections/kinda-image-banner.liquid
+++ b/sections/kinda-image-banner.liquid
@@ -423,6 +423,14 @@
             "id": "text_style",
             "options": [
               {
+                "value": "h1",
+                "label": "Heading 1"
+              },
+              {
+                "value": "h2",
+                "label": "Heading 2"
+              },
+              {
                 "value": "body",
                 "label": "t:sections.image-banner.blocks.text.settings.text_style.options__1.label"
               },
